# lnk-rs

./: .gitignore  Cargo.toml  np.lnk
fuzz/: Cargo.toml
fuzz/fuzz_targets/: shell_link_header.rs
src/: binread_flags.rs  current_offset.rs  filetime.rs  guid.rs  header.rs  idlist.rs  itemid.rs  lib.rs  linkinfo.rs  linktarget.rs  stringdata.rs
src/extradata/: console_data.rs  console_fe_data.rs  darwin_data.rs  environment_variable_data.rs  icon_environment_data.rs  known_folder_data.rs  mod.rs  property_store_data.rs  shell_item_identifiers.rs  shim_data.rs  special_folder_data.rs  tracker_data.rs  vista_and_above_id_list_data.rs
src/generic_types/: filetime.rs  idlist.rs  mod.rs
src/header/: file_attributes_flags.rs  hotkey_flags.rs  link_flags.rs
src/strings/: fixed_size_string.rs  mod.rs  null_terminated_string.rs  sized_string.rs  string_encoding.rs
tests/: create-read-blank.rs  test.rs
