[package]
name = "lnk"
version = "0.5.1"
authors = [
    "Lily Hopkins <bsalarius@gmail.com>",
    "Simon Buchan <simon.buchan.nz@gmail.com>",
    "Jan Starke <jan.starke@posteo.de>",
]
edition = "2021"
description = "A Rust library to parse and write Windows shortcut files (.lnk)"
license = "MIT"
repository = "https://github.com/lilopkins/lnk-rs"

[features]
default = ["serde"]
binwrite = [ "stability" ]
unstable-binwrite = [ ]
serde = ["dep:serde", "dep:serde_json", "bitflags/serde"]
lnk2json = ["serde", "dep:clap", "dep:simplelog", "dep:clap-verbosity-flag", "dep:clio", "dep:anyhow"]

[[bin]]
name = "lnk2json"
path = "src/bin/lnk2json/main.rs"
required-features = ["lnk2json"]

[[example]]
name = "create_lnk"
path = "examples/create_lnk.rs"
required-features = ["binwrite"]

[[test]]
name = "create-read-blank"
path = "tests/create-read-blank.rs"
required-features = ["binwrite"]

[dependencies]
log = "0.4.11"
bitflags = "2.4"
chrono = "0.4.23"
num-traits = "0.2.14"
num-derive = "0.4"
binrw = "0.14"
getset = "0.1"
thiserror = "2.0"
encoding_rs = "0.8"
uuid = "1.7"
winstructs = "0.3"
substring = "1.4"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

clap = { version = "4", features = ["derive", "wrap_help", "cargo"], optional = true }
simplelog = { version = "0.12", optional = true }
clap-verbosity-flag = { version = "3.0.2", optional = true }
clio = { version = "0.3", features = ["clap-parse"], optional = true }
anyhow = { version = "1.0", optional = true }

stability = {version = "0.2.1", optional = true }

[dev-dependencies]
pretty_env_logger = "0.5.0"
